--- a/resources/views/templates/Tabler/mobile/partials/header.blade.html
+++ b/resources/views/templates/Tabler/mobile/partials/header.blade.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover"/>
     <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
+    <meta name="turbolinks-cache-control" content="no-cache">
     <title> {{PageTitle}} </title>
     <!-- CSS files -->
 
@@ -12,6 +13,7 @@
     <link href="{{APP_URL}}/{{TemplatePath}}/dist/css/tabler-payments.min.css" rel="stylesheet"/>
     <link href="{{APP_URL}}/{{TemplatePath}}/dist/css/tabler-vendors.min.css" rel="stylesheet"/>
     <link href="{{APP_URL}}/{{TemplatePath}}/dist/css/demo.min.css" rel="stylesheet"/>
+    {{ include('partials/single-page-app.html') }}
   </head>
 
   <body>
