--- a/resources/views/templates/Tabler/mobile/partials/single-page-app.html
+++ b/resources/views/templates/Tabler/mobile/partials/single-page-app.html
@@ -3,7 +3,7 @@
     pageAccelerator();
 </script> -->
 <!-- unpkg -->
-<script src="https://cdn.jsdelivr.net/npm/pjax-api@latest"></script>
+<!-- <script src="https://cdn.jsdelivr.net/npm/pjax-api@latest"></script>
 <script type="text/javascript">
 const { Pjax } = require('pjax-api');
 
@@ -17,4 +17,5 @@ new Pjax({
     'body'
   ]
 });
-</script>
+</script> -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/turbolinks/5.2.0/turbolinks.js" integrity="sha512-G3jAqT2eM4MMkLMyQR5YBhvN5/Da3IG6kqgYqU9zlIH4+2a+GuMdLb5Kpxy6ItMdCfgaKlo2XFhI0dHtMJjoRw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
